--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #eff3f7;
+  height: 100%;
+}
+
+html, #root {
+  height: 100%;
 }
